css/custom.css
/**
 * Nav customizations
 */
nav {
    opacity: 0.9;
}

nav > div > div > ul > li > a {
    margin-top: 2px;
} 

/**
 * Typography and design
 */
.idno-body p, .e-content p, .idno-object .e-content li, body, .idno-body li {
    font-family: 'Raleway', sans-serif !important;
    line-height: 1.75em !important;
}

h1, h2, h3, h4, h5, h6 {
    font-family: 'Playfair Display', serif !important;
}
h1 { font-size: 3.0em !important; }
h2 { font-size: 2.5em !important; }
h3, h4, h5, h6 { font-size: 2.0em !important; }
p { font-size: 1.0em !important; }

blockquote {
    font-size: 1.0em;
    border-left: 10px solid #ccc;
    background: #f5f5f5;
    margin: 2em 2em 2em 2em;
    padding: 2em 2em 1em 2em;
}
blockquote p, blockquote ol, blockquote ul {
    font-size: 1.0em !important;
}
p.attribution {
    font-size: 1.0em !important;
    text-align: right;
    font-style: italic;
}
blockquote ol, blockquote ul {
    margin: 0 !important;
}

/**
 * Convenience for images
 */
img.right {
  margin: 0 0 1em 1em;
  float: right;
}
img.left {
  margin: 0 1em 1em 0;
  float: left;
}

/**
 * Twitter embeds
 */
.twitter-tweet-rendered {
    margin: 2em auto 2em auto;
}

/**
 * Responsive design
 */
@media (min-width:800px) {
  .col-md-offset-2 {
    margin-left: 10%
  }

  .col-md-8 {
      width: 80%;
  }

  .idno-content {
    padding: 1.5em 3.0em;
  }
}

/**
 * General design improvements
 */
.idno-entry .h-card {
    text-align: left;
}

div.photo-view {
    text-align: center;
}

div.profile ul.badges {
    list-style-type: none;
    height: 30px;
    width: 360px;
    margin-left: auto;
    margin-right: auto;
}

div.profile ul.badges li {
    display: block;
    width: 90px;
    float: left;
}

img.sunlit_image, img.migrated_image {
    max-height: 180px !important; width: auto !important; padding: 1px !important;
}

.multiple-images .photo-view img {
    width: 263px;
    height: 263px;
    margin-bottom: -15px;
}

.multiple-images .photo-view-more {
    width: 263px;
    height: 263px;
}

.multiple-images p {
    clear: both;
}

h2.idno-bookmark {
    font-size: 1.5em !important;
}

/**
 * Instagram
 */
iframe.instagram-media {
    display: block !important;
    margin: 2em auto 2em auto !important;
}

/**
 * Current status and other customizations
 */
#current-status {
  width: 3.5em;
  cursor: pointer;
  position: fixed;
  bottom: 1em;
  right: 1em;
  padding: 1em;
  background: white;
  opacity: 0.85;
  text-align: center;
  z-index: 10000;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: clip;
  transition: width 0.5s;
}
#current-status .label {
  display: none;
  color: #333;
}
#current-status:hover {
  text-align: left;
  width: 14em;
  transition: width 1s;
}
#current-status:hover .label {
  display: initial;
}

.charging, .full {
  color: #2ADD00;
}

.wifi-disconnected {
  color: #bbb;
}

#location a {
  color: #000;
}

div.🕸💍 {
  position: fixed;
  bottom: 1em;
  left: 1em;
  padding: 1em;
  background: white;
  opacity: 0.85;
  text-align: center;
  z-index: 10000;
}

#theme-switcher {
  width: 3.5em;
  cursor: pointer;
  position: fixed;
  bottom: 11em;
  right: 1em;
  padding: 1em;
  background: white;
  opacity: 0.85;
  text-align: center;
  z-index: 10000;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: clip;
  transition: width 0.5s;
}

#theme-switcher:hover {
  text-align: left;
  width: 10em;
  transition: width 1s;
}

#theme-switcher a {
  color: #999;
  text-decoration: none;
}
#theme-switcher a .active {
  color: black;
}
#theme-switcher a:hover, #theme-switcher a:hover .label {
  color: #4c93cb;
}

#theme-switcher .label {
  display: none;
  color: #333;
}
#theme-switcher:hover .label {
  display: initial;
}


/**
 * Archive
 */
#archive-message {
  background-color: rgba(0, 0, 0, 0.7);
  color: white;
  border-radius: 10px;
  text-align: center;
  padding: 1em 2em;
  width: 85%;
  margin: 0 auto 2em auto;
}
#archive-message h3 {
  font-style: italic;
}
#archive-message h1, #history-message h3 {
  clear: both;
}

/**
 * Archive Index
 */
.archive-index h1 {
  margin-top: 1em;
}
div.archive-index a {
  color: #333;
}
div.archive-index {
  background: white;
  padding: 3em 0 3em 0;
}

div.archive-year {
  clear: both;
  overflow: hidden;
  margin-bottom: 1em;
}

div.archive-year h2 {
  font-size: 2em !important;
  clear: both;
  margin-bottom: 1em;
}

ul.archive-month {
  float: left;
  list-style-type: none;
  padding: 0;
  margin: 0;
  text-align: center;
}
ul.archive-month li {
  margin: 1px 1px 0 0;
  transition: all 200ms ease-in-out;
}
div.archive-index li:hover {
  background: #357ebd;
}
li.archive-month {
  background: #333;
}
li.archive-month > a {
  color: #ccc;
}
li.archive-day a {
  display: inline-block;
}

li.archive-day a {
  width: 30px;
}
ul.archive-month {
  width: 30px;
}
div.archive-index {
  padding: 0 0 0 10px;
} 
@media (min-width: 768px) {
  li.archive-day a {
    width: 50px;
  }
  ul.archive-month {
    width: 50px;
  } 
  div.archive-index {
    padding: 0 0 0 40px;
  } 
}
@media (min-width: 992px) {
  li.archive-day a {
    width: 60px;
  }
  ul.archive-month {
    width: 60px;
  } 
}
@media (min-width: 1200px) {
  li.archive-day a {
    width: 75px;
  }
  ul.archive-month {
    width: 75px;
  }
}

li.archive-day.day-1  { background: #c0c0c0; }
li.archive-day.day-2  { background: #c2c2c2; }
li.archive-day.day-3  { background: #c4c4c4; }
li.archive-day.day-4  { background: #c6c6c6; }
li.archive-day.day-5  { background: #c8c8c8; }
li.archive-day.day-6  { background: #cacaca; }
li.archive-day.day-7  { background: #cccccc; }
li.archive-day.day-8  { background: #cecece; }
li.archive-day.day-9  { background: #d0d0d0; }
li.archive-day.day-10 { background: #d2d2d2; }
li.archive-day.day-11 { background: #d4d4d4; }
li.archive-day.day-12 { background: #d6d6d6; }
li.archive-day.day-13 { background: #d8d8d8; }
li.archive-day.day-14 { background: #dadada; }
li.archive-day.day-15 { background: #dcdcdc; }
/* ... */

